Fixed #36554 -- Fixed TabularInline to prevent link truncation with long title.

--- a/django/contrib/admin/static/admin/css/forms.css
+++ b/django/contrib/admin/static/admin/css/forms.css
@@ -427,8 +427,22 @@ body.popup .submit-row {
 }
 
 .inline-group .tabular tr td.original {
-    padding: 2px 0 0 0;
-    width: 0;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    left: 0;
+    height: 2em;
+    padding: 2px 9px;
+    overflow: hidden;
+    font-size: 0.875rem;
+    font-weight: bold;
+    color: var(--body-quiet-color);
+    border-bottom: 0;
+}
+
+.inline-group .tabular tr td.original a + a {
+  margin-left: 8px;
 }
 
 .inline-group .tabular th.original {
@@ -441,14 +455,13 @@ body.popup .submit-row {
 }
 
 .inline-group .tabular td.original p {
-    position: absolute;
-    left: 0;
-    height: 1.2em;
-    padding: 2px 9px;
+    display: inline-block;
+    max-width: 60%;
+    white-space: nowrap;
     overflow: hidden;
+    text-overflow: ellipsis;
     font-size: 0.875rem;
     font-weight: bold;
-    color: var(--body-quiet-color);
 }
 
 .inline-group div.add-row,
